# geo3

./: .gitignore  Core.hs  Main.hs  README.md  geogossip.cabal  notes  run
db/: create  sqlite3.sql  test.db
public/: app.js  debug.html  index.html
public/css/: site.css
public/js/: app.js  config.js  debug.js
src/: Client.hs  ClientParser.hs  Core.hs  Main.hs  Main2.hs  SqliteStore.hs  WebsocketServer.hs
