Name: geo3
Version: 0.1

Synopsis: Geochat project
Description: Geochat
Author: Daniel Choi
Maintainer: dhchoi@gmail.com
Build-Type: Simple
Category: Web
License:             MIT
License-file:        LICENSE
Cabal-Version: >= 1.4

Executable geogossip
  Hs-Source-Dirs: src
  main-is: Main.hs
  Build-Depends: 
    base,
    ghc-prim,
    text,
    attoparsec,
    websockets >= 0.6.0.3,
    websockets-snap,
    aeson,
    bytestring,
    transformers >= 0.3.0.0,
    containers >= 0.4.2.1,
    time >= 1.4,
    mtl, 
    snap-core,
    snap-server

Executable wsclient
  Hs-Source-Dirs: src
  main-is: Client.hs
  Build-Depends: 
    base,
    ghc-prim,
    text,
    websockets >= 0.6.0.3,
    aeson,
    bytestring,
    transformers >= 0.3.0.0,
    containers >= 0.4.2.1,
    time >= 1.4,
    mtl


